# euroc_manipulation

euroc_manipulation_moveit/: .setup_assistant  CMakeLists.txt  package.xml
euroc_manipulation_moveit/config/: arm.urdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  kuka_lwr.srdf  kuka_lwr.srdf~
euroc_manipulation_moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  kuka_lwr_moveit_controller_manager.launch.xml  manipulation.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_context.launch~  planning_pipeline.launch.xml  publish_joint_state.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
euroc_manipulation_moveit/src/: telemetry-to-joint-state.cpp
euroc_planning_manipulation/: CMakeLists.txt  package.xml  setup.py
euroc_planning_manipulation/launch/: test.launch
suturo_manipulation_moveit/: .setup_assistant  CMakeLists.txt  package.xml
suturo_manipulation_moveit/config/: arm.urdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  kuka_lwr.srdf  kuka_lwr.srdf~  mast.urdf  ompl_planning.yaml  paddings.yaml  sensors_kinect.yaml  t.launch
suturo_manipulation_moveit/include/suturo_manipulation_moveit/: node_status.hpp
suturo_manipulation_moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  kuka_lwr_moveit_controller_manager.launch.xml  kuka_lwr_moveit_sensor_manager.launch.xml  manipulation.launch  manipulation_servo.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_context.launch~  planning_pipeline.launch.xml  publish_joint_state.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  tf.launch  trajectory_execution.launch.xml  warehouse.launch
suturo_manipulation_moveit/src/: arm_base_controller.cpp  arm_controller.cpp  arm_controller_servo.cpp  base_controller.cpp  gripper_controller.cpp  perception_to_planningscene.cpp  publish_objects_tf_frames.cpp  save_pose.cpp  spawn_planningscene.cpp  telemetry-to-joint-state.cpp
suturo_manipulation_tools/: CMakeLists.txt  package.xml
suturo_manipulation_tools/src/: perception_to_planningscene.cpp
