<package>

  <name>suturo_manipulation_tools</name>
  <version>0.2.0</version>
  <description>
     Tools
  </description>
  <author email="assistant@moveit.ros.org">MoveIt Setup Assistant</author>
  <maintainer email="assistant@moveit.ros.org">MoveIt Setup Assistant</maintainer>

  <license>BSD</license>
  
  <build_depend>roscpp</build_depend>
  <build_depend>suturo_msgs</build_depend>
  <build_depend>suturo_perception_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>suturo_msgs</run_depend>
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>suturo_perception_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  
</package>
